name:                hsync
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
author:              winterland1989
maintainer:          winterland1989@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hsync-server
  default-language:    Haskell2010
  main-is:             Server.hs
  build-depends:       base               >=4.8 && <4.9
                     , bytestring         >=0.10 && <0.11
                     , template-haskell   >=2.10 && <2.11
                     , process            >=1.2 && <1.3
                     , apiary             >=1.4 && <1.5
                     , warp               >=3.0 && <3.1
                     , text               >=1.2 && <1.3
                     , filepath           >=1.4 && <1.5
                     , rainbow            >=0.22
                     , time               >=1.5 && <1.6
                     , directory          >=1.2 && <1.3
                     , blaze-html         >=0.8 && <0.9
                     , SHA2               >=0.2 && <0.3

executable hsync
  default-language:    Haskell2010
  main-is:             Client.hs
  build-depends:       base               >=4.8 && <4.9
                     , http-conduit       >=2.1 && <2.2
                     , conduit            >=1.2 && <1.3
                     , conduit-extra      >=1.1 && <1.2
                     , bytestring         >=0.10 && <0.11
                     , template-haskell   >=2.10 && <2.11
                     , process            >=1.2 && <1.3
                     , text               >=1.2 && <1.3
                     , filepath           >=1.4 && <1.5
                     , rainbow            >=0.22
                     , time               >=1.5 && <1.6
